--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ labels:{
 
 
   <img src="https://m.media-amazon.com/images/I/81QRRmncQ+L._SX679_.jpg" alt="">
-               
+               </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Understood</button>
