--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -721,7 +721,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -767,7 +767,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -816,7 +816,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -861,7 +861,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -908,7 +908,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
