--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -983,8 +983,6 @@ labels:{
                         
 
 
-
-
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -992,7 +990,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div>
             <br>
@@ -1030,7 +1028,7 @@ labels:{
                           </div>
                         </div>
                       </div>
-                    </div></div></div>
+                    </div></div>
               </div>
             </div> 
             <br>
@@ -1093,7 +1091,7 @@ labels:{
                       <div  class="modal-dialog modal-dialog-scrollable">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                            <h5 class="modal-title" id="staticBackdropLabel">Specifications</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body" style="text-align:left ;">
