--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@ responsive:true,
 maintainAspectRatio: false,
 indexAxis:'y',
  plugin:{ sort:{
-  enable: true,
+  enable: false,
   mode: 'function',
   reference: [],
   sortBy: 'label',
   order: 'asc',
   sortFunction: (a, b) => {
-    if (a.label < b.label) return -1
-    if (a.label > b.label) return 1
+    if (a.labels < b.labels) return -1
+    if (a.labels > b.labels) return 1
     return 0
 } }    
 
