--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ indexAxis:'y',
   sortBy: 'label',
   order: 'asc',
   sortFunction: (a, b) => {
-    if (a.labels < b.labels) return -1
-    if (a.labels > b.labels) return 1
+    if (a.label < b.label) return -1
+    if (a.label > b.label) return 1
     return 0
 } }    
 
