--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ font:{size:6}
     labels: labels2,
     datasets: [{
       label: 'Avg benchmarks',
-      backgroundColor: 'green',
+      backgroundColor: 'blue',
       borderColor: 'black',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
@@ -290,8 +290,8 @@ font:{size:10}
   
 </script>
 <main class="container py-5 chart2">
-<div class="chart2" style="height:300px">
-  <canvas id="myChart2" style="height:300px"></canvas>
+<div class="chart2" style="height:200px">
+  <canvas id="myChart2" style="height:200px"></canvas>
 </div></main>
 
 <script>
