--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ font:{size:6}
     data: data2,
     options: {
 responsive:true,
-maintainAspectRatio: true,
+maintainAspectRatio: false,
 indexAxis:'y',
 
 
