--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 #hov:hover{box-shadow: 0 4px 12px 0 #006dFF}
 #hov{box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4)}
 
-        img{
+        .imgggg{
             height: 300px;
             object-fit: contain;
         }
@@ -290,8 +290,8 @@ font:{size:10}
   
 </script>
 <main class="container py-5 chart2">
-<div class="chart2" style="height:400px">
-  <canvas id="myChart2" style="height:400px"></canvas>
+<div class="chart2" style="height:500px">
+  <canvas id="myChart2" style="height:500px"></canvas>
 </div></main>
 
 <script>
