--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 #hov:hover{box-shadow: 0 4px 12px 0 #006dFF}
 #hov{box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4)}
 
-        .imgggg{
+        .img{
             height: 300px;
-            object-fit: contain;
+            object-fit:fill;
         }
         #carouselExampleDark,#carouselExampleCaptions,.carousel-item{
             width: 100%;
