--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 #hov:hover{box-shadow: 0 4px 12px 0 #006dFF}
 #hov{box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4)}
 
-        .img{
+        img{
             height: 300px;
             object-fit:fill;
         }
