--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@ font:{size:10}
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-const labels3 = ["Note 10 pro","Price range best"]
+const labels3 = ["Redmi Note 10s","Price range best"]
   ;
  const data3 = {
   labels:labels3 ,
 
   datasets: [{
     label: 'My First Dataset',
-    data:  [114089.5, 169369.5],
+    data:  [187889, 187889],
     backgroundColor: [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
@@ -478,7 +478,7 @@ const labels4 = ["Oppo A74 5g","Price range best"]
 
   datasets: [{
     label: 'My First Dataset',
-    data:  [167779,187880],
+    data:  [167779,187889],
     backgroundColor: [
       'red',
       'green',
@@ -518,8 +518,8 @@ labels:{
 
  </script>
 <div style="padding:12px;width:"100%";height:"240px;align-items:center">
-<div class="chart4" style="height:200px;width:200px">
-  <canvas id="myChart4" style="height:200px;width:200px"></canvas>
+<div class="chart4" style="height:230px;width:250px">
+  <canvas id="myChart4" style="height:230px;width:250px"></canvas>
 </div>
 </div>
                         
