--- a/index.html
+++ b/index.html
@@ -407,7 +407,8 @@ labels:{
                       </div>
                       <div class="modal-body" style="text-align:left ;">
 
-  <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br><br><span class="bi bi-gpu-card"> Mali-G76 3EEMC4 (900 MHz) </span><br><br>
+  <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br><br>
+<span class="bi bi-gpu-card"> Graphics card- Mali-G76 3EEMC4 (900 MHz) </span><br><br>
 <span class="bi bi-memory"> RAM- 6 GB or 8 GB(2133 Mhz)  </span><br><br>
 <span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 &nbsp;&nbsp; MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br>
 <span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br>
