--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ display:none}
    <br>
 <nav class="navbar fixed-top" style="background-color: #e3f2fd;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="font-family: 'Comfortaa', cursive;">Top10tech,<span style="font-size:10px">buy best</span></a>
+    <a class="navbar-brand" href="https://www.canva.com/design/DAFJT9x5gFU/uWdDPN_wl4CFlm2jnqUqgQ/view?utm_content=DAFJT9x5gFU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" style="font-family: 'Comfortaa', cursive;">Top10tech,<span style="font-size:10px">buy best</span></a>
    
 
 
