--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ labels:{
 
 
 <section class="container pt-5" > 
-<div class="images_extra" style="background-image:url(https://images.pexels.com/photos/3082341/pexels-photo-3082341.jpeg?auto=compress&cs=tinysrgb&w=380) ; width: 380px;height: 229px;object-fit:cover;background-repeat: no-repeat;  "></div>
+<div class="images_extra" style="background-image:url(https://images.pexels.com/photos/3082341/pexels-photo-3082341.jpeg?auto=compress&cs=tinysrgb&w=380) ; width: 380px;height: 229px;object-fit:cover;background-repeat: no-repeat;  display:none"></div>
 
 </section>
 
