--- a/index.html
+++ b/index.html
@@ -243,7 +243,27 @@ font:{size:6}
     labels: labels2,
     datasets: [{
       label: 'Avg benchmarks',
-      backgroundColor: 'blue',
+      backgroundColor: [
+      'rgb(255, 99, 132)',
+      'rgb(0, 100, 0)',
+      'rgb(255, 205, 86)',
+       'rgb(255, 20, 100)',
+       'rgb(155, 58, 86)',
+        'rgb(195, 250, 216)',
+        'rgb(155, 25, 21)',
+        'rgb(200, 135, 210)',
+          'rgb(75, 25, 21)',
+        'rgb(255, 255, 0)',
+          'rgb(0, 0, 128)',
+          'rgb(255, 20, 147)',
+          'rgb(75,0,130)',
+          'rgb(176, 196, 222)',
+          'rgb(255, 0, 255)',
+          'rgb(0, 255, 0)',
+          'rgb(255, 215, 0)',
+          'rgb(255, 228, 196)',
+          'rgb(112,128,144)',
+    ],
       borderColor: 'black',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
@@ -470,7 +490,8 @@ labels:{
                       </div>
                       <div class="modal-body" style="text-align:left ;">
              
-  <span class="bi bi-cpu"> Processor- Qualcomm Snapdragon 480 5G (2 GHz) </span><br><br><span class="bi bi-memory"> RAM- 6 GB   </span><br><br>
+  <span class="bi bi-cpu"> Processor- Qualcomm Snapdragon 480 5G (2 GHz) </span><br><br><span class="bi bi-gpu-card"> Graphics card- 	Adreno 619 (650 MHz) (~468 GFLOPS) </span><br><br>
+                         <span class="bi bi-memory"> RAM- 6 GB   </span><br><br>
 <span class="bi bi-camera"> Camera- Main(48 MP), Ultra wide(8 MP), Macro lens(2 MP), Depth lens(2 MP)    </span><br><br><span class="bi bi-badge-hd"> Display- LTPS LCD (480 nits)(28.6 ms)  </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 90 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 128 GB (256 GB max)(UFS 2.1)</span><br><br><span class="bi bi-lightning-charge"> Charging- Fast Charging(18 W)(Full charging time- 2h) </span><br>
 
 <!-- Graph pie -->
@@ -578,7 +599,8 @@ labels:{
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body" style="text-align:left ;">
-                        <span class="bi bi-cpu"> Processor- Qualcomm Snapdragon 732G (2300 GHz)  </span><br><br><span class="bi bi-memory"> RAM- 4 or 6 GB (2133 MHz)   </span><br><br>
+                        <span class="bi bi-cpu"> Processor- Qualcomm Snapdragon 732G (2300 GHz)  </span><br><br><span class="bi bi-gpu-card"> Graphics card- 	Adreno 618 (810 MHz) (~435 GFLOPS) </span><br><br>	
+                          <span class="bi bi-memory"> RAM- 4 or 6 GB (2133 MHz)   </span><br><br>
 <span class="bi bi-camera"> Camera- Main(64 MP), Ultra wide(8 MP), Depth(2 MP), Front camera(16 MP)  </span><br><br><span class="bi bi-badge-hd"> Display- IPS LCD (450 nits)(HDR 10)  </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 120 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 6000mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64 or 128 GB(512 Gb max)(UFS 2.1)</span><br><br><span class="bi bi-lightning-charge"> Charging- 20W (Fast charging)(Full charging time- 2.30 h)  </span><br>
 
 
