--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ labels:{
                       <div class="modal-body" style="text-align:left ;">
 
   <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br><br>
-<span class="bi bi-gpu-card"> Graphics card- Mali-G76 3EEMC4 (900 MHz) </span><br><br>
+<span class="bi bi-gpu-card"> Graphics card- Mali-G76 3EEMC4 (900 MHz) (~195.8 GFLOPS) </span><br><br>
 <span class="bi bi-memory"> RAM- 6 GB or 8 GB(2133 Mhz)  </span><br><br>
 <span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 &nbsp;&nbsp; MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br>
 <span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br>
@@ -545,8 +545,8 @@ labels:{
 };
 
  </script>
-<div style="padding:12px;width:"100%";height:"240px;align-items:center">
-<div class="chart4" style="height:230px;width:250px">
+<div style="padding:10px;width:"100%";height:"220px;align-items:center">
+<div class="chart4" style="height:220px;width:240px">
   <canvas id="myChart4" style="height:230px;width:250px"></canvas>
 </div>
 </div>
