--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ labels:{
 </script>
 
 
-             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" >
+             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:300px"><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" >
 
                       </div>
                       <div class="modal-footer">
