--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ labels:{
 </script>
 
 
-             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain"><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" >
+             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain"><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" style="width:400px;object-fit:contain">
 
                       </div>
                       <div class="modal-footer">
@@ -557,9 +557,9 @@ labels:{
     config4
   );
 </script><br><br>
-     <img src="https://m.media-amazon.com/images/S/aplus-media/vc/ce50b6c0-5ea3-4a61-b973-276c8f8bb254.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br>
-                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/fa8869ca-2c9d-40e4-96dc-085f3191c944.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain"><br>
-                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/245a81c4-eb1d-4ec4-b56e-e8c2e1faf77f.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain"><br>
+     <img src="https://m.media-amazon.com/images/S/aplus-media/vc/ce50b6c0-5ea3-4a61-b973-276c8f8bb254.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain">
+                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/fa8869ca-2c9d-40e4-96dc-085f3191c944.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain">
+                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/245a81c4-eb1d-4ec4-b56e-e8c2e1faf77f.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain">
                   <img src="https://m.media-amazon.com/images/S/aplus-media/vc/acb5c4f0-22d8-4baa-8eca-f90d6c52c1de.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:450px;object-fit:contain">
                       </div>
                       <div class="modal-footer">
