--- a/index.html
+++ b/index.html
@@ -553,9 +553,9 @@ labels:{
     config4
   );
 </script><br><br>
-     <img src="https://m.media-amazon.com/images/S/aplus-media/vc/ce50b6c0-5ea3-4a61-b973-276c8f8bb254.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto">
-                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/fa8869ca-2c9d-40e4-96dc-085f3191c944.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto">
-                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/245a81c4-eb1d-4ec4-b56e-e8c2e1faf77f.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto">
+     <img src="https://m.media-amazon.com/images/S/aplus-media/vc/ce50b6c0-5ea3-4a61-b973-276c8f8bb254.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto"><br>
+                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/fa8869ca-2c9d-40e4-96dc-085f3191c944.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto"><br>
+                  <img src="https://m.media-amazon.com/images/S/aplus-media/vc/245a81c4-eb1d-4ec4-b56e-e8c2e1faf77f.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto"><br>
                   <img src="https://m.media-amazon.com/images/S/aplus-media/vc/acb5c4f0-22d8-4baa-8eca-f90d6c52c1de.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt="" style="width:400px;object-fit:contain;height:auto">
                       </div>
                       <div class="modal-footer">
