--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ display:none}
           'rgb(255, 228, 196)',
           'rgb(112,128,144)',
     ],
-      borderColor: 'rgb(255, 99, 132)',
+      borderColor: 'rgb(20, 20, 20)',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
   53478  , 95749.5 ,167779   ,95913  ,161020.5],
@@ -185,7 +185,7 @@ scales: {
       y: {
         title: {
           display: true,
-          text:'This is a title'
+          text:'Name of phones under 15000'
           
         },
         min: 0,
