--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@ display:none}
       </marquee>
 
 
+
+<div class="card text-center">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Whatsapp</a>
+  </div>
+  <div class="card-footer text-muted">
+    Top10techs
+  </div>
+</div>
+
+
+
+
+
+
+
  <main class="container py-5" style="height:100px;" >
 
     <h3 style="text-align:center ;" id="top_heading">Best Gaming smartphones under 15000</h3></main> 
