--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ display:none}
 
 
 <main class="container py-5" style="height:auto;" >
-<div class="card text-center-bg-info mb-3">
+<div class="card text-bg-info-center mb-3">
   <div class="card-header">
     Featured
   </div>
