--- a/index.html
+++ b/index.html
@@ -122,16 +122,17 @@ display:none}
 
 <main class="container py-5" style="height:auto;" >
 <div class="card text-bg-info-center mb-3">
-  <div class="card-header">
-    Featured
+  <div class="card-header-bg-info">
+    WHatsapp assistance
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h5 class="card-title">Don't know which phone to buy under 15000</h5>
+    <p class="card-text">Whatsapp us and get free smartphone guide assistance of phones under 15000. Tell us your need and you will get your desired phone. You donot have to go here and there in searching the best phone for you.
+After getting know your desired phone you can buy directly from world's largest e commerce website Amazon</p>
     <a href="#" class="btn btn-primary">Whatsapp</a>
   </div>
   <div class="card-footer text-muted">
-    Top10techs
+   Our executive will reply you within a few hours
   </div>
 </div>
 </main>
