--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ display:none}
 
 <main class="container py-5" style="height:auto;" >
 <div class="card text-bg-info-center mb-3">
-  <div class="card-header-bg-info">
+  <div class="card-header">
     WHatsapp assistance
   </div>
   <div class="card-body">
