--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ display:none}
 
 
 <main class="container py-5" style="height:auto;" >
-<div class="card text-bg-info-center mb-3">
+<div class="card text-bg-primary mb-3" >
+<div class="card text-center mb-3">
   <div class="card-header">
     WHatsapp assistance
   </div>
@@ -134,7 +135,7 @@ After getting know your desired phone you can buy directly from world's largest 
   <div class="card-footer text-muted">
    Our executive will reply you within a few hours
   </div>
-</div>
+</div></div>
 </main>
 
 
