--- a/index.html
+++ b/index.html
@@ -122,16 +122,15 @@ display:none}
 
 <main class="container py-5" style="height:auto;" >
 <div class="card text-center text-bg-info mb-3">
-  <div class="card-header">
+  <div class="card-header text-bg-light mb-3">
     WHatsapp assistance
   </div>
   <div class="card-body">
     <h5 class="card-title">Don't know which phone to buy under 15000</h5>
-    <p class="card-text">Whatsapp us and get free smartphone guide assistance of phones under 15000. Tell us your need and you will get your desired phone. You donot have to go here and there in searching the best phone for you.
-After getting know your desired phone you can buy directly from world's largest e commerce website Amazon</p>
+    <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10000 to Rs 15000)</p>
     <a href="#" class="btn btn-primary">Whatsapp</a>
   </div>
-  <div class="card-footer text-muted">
+  <div class="card-footer text-muted text-bg-light mb-3">
    Our executive will reply you within a few hours
   </div>
 </div></div>
