--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@ display:none}
 
 <main class="container py-5" style="height:auto;" >
 <div class="card text-center text-bg-primary mb-3">
-  <div class="card-header text-bg-light mb-3">
+  <div class="card-header text-bg-primary mb-3">
     WHatsapp assistance
   </div>
   <div class="card-body">
     <h5 class="card-title">Don't know which phone to buy under 15000</h5>
     <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10000 to Rs 15000)</p>
-    <a href="#" class="btn btn-primary">Whatsapp</a>
+    <a href="#" class="btn btn-light">Whatsapp</a>
   </div>
-  <div class="card-footer text-muted text-bg-light mb-3">
+  <div class="card-footer text-muted text-bg-primary mb-3">
    Our executive will reply you within a few hours
   </div>
 </div></div>
@@ -408,6 +408,7 @@ labels:{
 
 
 
+<section class="container pt-5" > 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
 
