--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@ display:none}
 
 <main class="container py-5" style="height:auto;" >
 <div class="card text-center text-bg-success mb-3">
-  <div class="card-header border-light text-bg-success mb-3">
+  <div class="card-header  text-bg-success mb-3">
     Whatsapp assistance
   </div>
   <div class="card-body text-bg-light border-success">
     <h5 class="card-title">Don't know which phone to buy under 15000</h5>
+<i class="bi bi-whatsapp" style="align-items:center"></i>
     <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10000 to Rs 15000)</p>
-    <a href="#" class="btn btn-primary">Whatsapp</a>
+    <a href="#" class="btn btn-primary bi bi-whatsapp">Whatsapp</a>
   </div>
-  <div class="card-footer text-muted border-light text-bg-success mb-3">
+  <div class="card-footer  border-light text-bg-success mb-3">
    Our executive will reply you within a few hours
   </div>
 </div></div>
