--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ display:none}
   <div class="card-header  text-bg-success mb-3">
     Whatsapp assistance
   </div>
+<img src="https://cdn.pixabay.com/photo/2015/01/08/18/30/man-593372_1280.jpg" class="card-img-top" alt="image here">
+  
+
+
   <div class="card-body text-bg-light border-success">
     <h5 class="card-title">Don't know which phone to buy under 15000</h5>
 <i class="bi bi-whatsapp" style="align-items:center"></i>
