--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@ display:none}
   
 
 
-  <div class="card-body text-bg-light border-success">
+  <div class="card-body text-bg-light border-primary">
     <h5 class="card-title">Don't know which phone to buy under 15000</h5>
 <i class="bi bi-whatsapp" style="align-items:center"></i>
     <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10,000 to Rs 15,000)</p>
-    <a href="#" class="btn btn-primary bi bi-whatsapp"> Whatsapp</a>
+    <a href="#" class="btn btn-success bi bi-whatsapp"> Whatsapp</a>
   </div>
-  <div class="card-footer  border-light text-bg-success mb-3">
+  <div class="card-footer  border-light text-bg-primary mb-3">
    Our executive will reply you within a few hours
   </div>
 </div></div>
