--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ display:none}
       </marquee>
 
 
-<main class="container py-5" style="height:auto;" >
-<div class="card text-center text-bg-success mb-3">
-  <div class="card-header  text-bg-success mb-3">
+<main class="container py-5" style="height:auto;width:auto" >
+<div class="card text-center text-bg-primary mb-3">
+  <div class="card-header  text-bg-primary mb-3">
     Whatsapp assistance
   </div>
 <img src="https://cdn.pixabay.com/photo/2015/01/08/18/30/man-593372_1280.jpg" class="card-img-top" alt="image here">
