--- a/index.html
+++ b/index.html
@@ -122,10 +122,8 @@ display:none}
 
 <main class="container py-5" style="height:auto;width:auto" >
 <div class="card text-center text-bg-primary mb-3">
-  <div class="card-header  text-bg-primary mb-3">
-    Whatsapp assistance
-  </div>
-<img src="https://cdn.pixabay.com/photo/2015/01/08/18/30/man-593372_1280.jpg" class="card-img-top" alt="image here">
+  
+<img src="https://images.pexels.com/photos/8867482/pexels-photo-8867482.jpeg?cs=srgb&dl=pexels-yan-krukov-8867482.jpg&fm=jpg" class="card-img-top" alt="image here">
   
 
 
@@ -135,15 +133,17 @@ display:none}
     <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10,000 to Rs 15,000)</p>
     <a href="#" class="btn btn-success bi bi-whatsapp"> Whatsapp</a>
   </div>
-  <div class="card-footer  border-light text-bg-primary mb-3">
-   Our executive will reply you within a few hours
-  </div>
+  
 </div></div>
 </main>
 
 
-
-
+<div class="card-header  text-bg-primary mb-3">
+    Whatsapp assistance
+  </div>
+<div class="card-footer  border-light text-bg-primary mb-3">
+   Our executive will reply you within a few hours
+  </div>
 
 
  <main class="container py-5" style="height:100px;" >
