--- a/Rough.html
+++ b/Rough.html
@@ -1,2 +1,34 @@
 <ul><span class="bi bi-cpu">Processor-  </span><span class="bi bi-memory">RAM-   </span>
 <span class="bi bi-camera">Camera-    </span><span class="bi bi-badge-hd">Display-  </span></ul>
+
+
+
+
+<main class="container py-5" style="height:auto;width:auto" >
+<div class="card text-center text-bg-primary mb-3">
+  
+<img src="https://images.pexels.com/photos/8867482/pexels-photo-8867482.jpeg?cs=srgb&dl=pexels-yan-krukov-8867482.jpg&fm=jpg" class="card-img-top" alt="image here">
+  
+
+
+
+
+
+
+  <div class="card-body text-bg-light border-primary">
+    <h5 class="card-title">Don't know which phone to buy under 15000</h5>
+<i class="bi bi-whatsapp" style="align-items:center"></i>
+    <p class="card-text">Chat with our technical expert and get your desired phone by just telling your need (Phone range Rs 10,000 to Rs 15,000)</p>
+    <a href="#" class="btn btn-success bi bi-whatsapp"> Whatsapp</a>
+  </div>
+  
+</div></div>
+</main>
+
+
+<div class="card-header  text-bg-primary mb-3">
+    Whatsapp assistance
+  </div>
+<div class="card-footer  border-light text-bg-primary mb-3">
+   Our executive will reply you within a few hours
+  </div>
