--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ font:{size:6}
   
 </script>
 <main class="container py-5">
-<div class="chart1" style="height:300px">
-  <canvas id="myChart"></canvas>
+<div class="chart1" style="height:250px">
+  <canvas id="myChart" style="height:250px"></canvas>
 </div></main>
 
 <script>
@@ -434,7 +434,7 @@ window.addEventListener("scroll", reveal);
       <div class="row pt-2 mx-n2">
 
           <!-- Product 1 -- Redmi note 10s -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal" >
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4" >
             <div id="hov" class="card product-card" >
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
@@ -652,7 +652,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 4 -- Redmi Note 10T 5g-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
             <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81oFpnDM2EL._SX679_.jpg" alt="Product"></a>
@@ -701,7 +701,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 5 -- Realme Narzo 50-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden"><img src="https://m.media-amazon.com/images/I/81X85GWtYHL._SX679_.jpg" alt="Product"></a>
@@ -747,7 +747,7 @@ labels:{
           </div>
 
           <!-- Product 6 -- Redmi note 11 -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81zLNgcvlaL._SX679_.jpg" alt="Product"></a>
@@ -795,7 +795,7 @@ labels:{
           </div> 
           
           <!-- Product 7-- Realme 9i-->
-         <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+         <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/51u9-q9539L._SX679_.jpg" alt="Product"></a>
@@ -840,7 +840,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 8-- Redmi 10 -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/31jOF0g5tVL.jpg" alt="Product"></a>
@@ -889,7 +889,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 9-- Oppo F19-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/71crCF+ogwL._SX679_.jpg" alt="Product"></a>
@@ -934,7 +934,7 @@ labels:{
             <br>
           </div>
           <!-- Product 10 --Narzo 50 A -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 reveal">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81Ke5qtC6oL._SX679_.jpg" alt="Product"></a>
