--- a/index.html
+++ b/index.html
@@ -205,7 +205,12 @@ font:{size:6}
   };
   
 </script>
-<main class="container py-5">
+
+
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+
+  <main class="container py-5">
 <div class="chart1" style="height:300px">
   <canvas id="myChart" style="height:300px"></canvas>
 </div></main>
@@ -216,6 +221,15 @@ font:{size:6}
     config
   );
 </script>
+  
+  </div>
+</div>
+
+
+
+
+
+
 
 
 
