--- a/index.html
+++ b/index.html
@@ -207,7 +207,13 @@ font:{size:6}
 </script>
 
 
-<div class="collapse" id="collapseExample">
+
+<button class="btn btn-primary" type="button" data-bs-toggle="collapseg" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
+    Button 
+  </button>
+
+
+<div class="collapseg" id="collapseExamplegraph">
   <div class="card card-body">
 
   <main class="container py-5">
