--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@ font:{size:6}
 </script>
 
 
-
-<button class="btn btn-primary" type="button" data-bs-toggle="collapseg" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
+<p>
+<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
     Button 
-  </button>
+  </button></p>
 
 
-<div class="collapseg" id="collapseExamplegraph">
+<div class="collapse" id="collapseExamplegraph">
   <div class="card card-body">
 
   <main class="container py-5">
