--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@ font:{size:6}
   
 </script>
 
-
+<main class="container py-5">
 <p>
 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
-    Button 
-  </button></p>
+    Click here to see the graph of average benchmark
+  </button></p></main>
 
 
 <div class="collapse" id="collapseExamplegraph">
@@ -446,7 +446,7 @@ window.addEventListener("scroll", reveal);
 <section class="container pt-5" > 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
-
+<h5>Our priority decreases as we go down the group</h5>
 
 
         <!-- Grid-->
