--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@ font:{size:6}
   
 </script>
 
-<main class="container py-5">
+<div style="padding:8px">
 <p>
 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
     Click here to see the graph of average benchmark
-  </button></p></main>
+  </button></p></div>
 
 
 <div class="collapse" id="collapseExamplegraph">
@@ -445,8 +445,9 @@ window.addEventListener("scroll", reveal);
 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
+<h5>Our priority decreases as we go down the group 
+<i bi bi-arrow-down></i></h5>
 <section class="container pt-5" > 
-<h5>Our priority decreases as we go down the group</h5>
 
 
         <!-- Grid-->
