--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ font:{size:6}
   
 </script>
 
-<div style="padding:8px">
+<div style="padding:6px;align-items:center">
 <p>
 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
     Click here to see the graph of average benchmark
@@ -446,7 +446,7 @@ window.addEventListener("scroll", reveal);
 <section class="container pt-5" > 
 <section class="container pt-5" > 
 <h5>Our priority decreases as we go down the group 
-<i bi bi-arrow-down></i></h5>
+<i class="bi bi-arrow-down" ></i></h5>
 <section class="container pt-5" > 
 
 
