--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@ display:none}
 
  <main class="container py-5" style="height:100px;" >
 
-    <h3 style="text-align:center ;" id="top_heading">Best Gaming smartphones under 15000</h3></main> 
+    <h3 style="text-align:center ;" id="top_heading">Best Gaming smartphones under 15000</h3>
+<br><p>
+<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
+    Click here to see the graph of average benchmark
+  </button></p>
+</main> 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
@@ -207,10 +212,7 @@ font:{size:6}
 </script>
 
 <div style="padding:6px;align-items:center">
-<p>
-<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
-    Click here to see the graph of average benchmark
-  </button></p></div>
+</div>
 
 
 <div class="collapse" id="collapseExamplegraph">
