--- a/index.html
+++ b/index.html
@@ -125,10 +125,6 @@ display:none}
  <main class="container py-5" style="height:100px;" >
 
     <h3 style="text-align:center ;" id="top_heading">Best Gaming smartphones under 15000</h3>
-<br><p>
-<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
-    Click here to see the graph of average benchmark
-  </button></p>
 </main> 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -211,8 +207,14 @@ font:{size:6}
   
 </script>
 
-<div style="padding:6px;align-items:center">
-</div>
+<main class="container py-5" style="height:80px;" >
+
+<p>
+<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
+    Click here to see the graph of average benchmark
+  </button></p>
+
+</main>
 
 
 <div class="collapse" id="collapseExamplegraph">
