--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@ window.addEventListener("scroll", reveal);
             </div>
           </div> 
 
-          <!-- Product 2 -- Oppo A74 5g -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+          <!-- Product 2 -- Oppo A74 5g --><div class="reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div id="hov"class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
@@ -538,7 +538,7 @@ window.addEventListener("scroll", reveal);
                 <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3vsHOEJ" style="color:white ;text-decoration: none;"> View price on Amazon</a></button>
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                 Quick view
-                </button><!-- Modal -->
+                </button></div><!-- Modal -->
                 <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel2" aria-hidden="true">
                   <div  class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
