--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ window.addEventListener("scroll", reveal);
             </div>
           </div> 
 
-          <!-- Product 2 -- Oppo A74 5g --><div class="reveal">
+          <!-- Product 2 -- Oppo A74 5g -->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div id="hov"class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
@@ -535,10 +535,10 @@ window.addEventListener("scroll", reveal);
                 </div>
               </div>
               <div class="card-body card-body-hidden">
-                <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3vsHOEJ" style="color:white ;text-decoration: none;"> View price on Amazon</a></button>
+                <button class="btn btn-primary btn-sm d-block w-100 mb-2 reveal" type="button" style="font-size:20px ;"><a href="https://amzn.to/3vsHOEJ" style="color:white ;text-decoration: none;"> View price on Amazon</a></button>
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                 Quick view
-                </button></div><!-- Modal -->
+                </button><!-- Modal -->
                 <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel2" aria-hidden="true">
                   <div  class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
@@ -632,7 +632,7 @@ labels:{
           </div> 
           
           <!-- Product 3 -- MOTOROLA G40 Fusion -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
             <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/313sxf4Q6mL.jpg" alt="Product"></a>
@@ -677,7 +677,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 4 -- Redmi Note 10T 5g-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
             <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81oFpnDM2EL._SX679_.jpg" alt="Product"></a>
@@ -726,7 +726,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 5 -- Realme Narzo 50-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden"><img src="https://m.media-amazon.com/images/I/81X85GWtYHL._SX679_.jpg" alt="Product"></a>
@@ -772,7 +772,7 @@ labels:{
           </div>
 
           <!-- Product 6 -- Redmi note 11 -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81zLNgcvlaL._SX679_.jpg" alt="Product"></a>
@@ -820,7 +820,7 @@ labels:{
           </div> 
           
           <!-- Product 7-- Realme 9i-->
-         <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+         <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/51u9-q9539L._SX679_.jpg" alt="Product"></a>
@@ -865,7 +865,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 8-- Redmi 10 -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/31jOF0g5tVL.jpg" alt="Product"></a>
@@ -914,7 +914,7 @@ labels:{
             <br>
           </div> 
           <!-- Product 9-- Oppo F19-->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/71crCF+ogwL._SX679_.jpg" alt="Product"></a>
@@ -959,7 +959,7 @@ labels:{
             <br>
           </div>
           <!-- Product 10 --Narzo 50 A -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 reveal">
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 ">
             <div class="card product-card" id="hov">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81Ke5qtC6oL._SX679_.jpg" alt="Product"></a>
