--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ labels:{
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3Jg3yJV" style="color:TEAL;">MOTOROLA G40 F </a></h3>
                 <div class="d-flex justify-content-between">
                   
-                  <div class="star-rating">#<b>3</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
+                  <div class="star-rating reveal">#<b style="color:red">3</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
                   </div>
                 </div>
               </div>
