--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@ labels:{
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">4 GB RAM, 128 GB Storage</a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3JuIe3v" style="color:TEAL;">Narzo 50 A</a></h3>
                 <div class="d-flex justify-content-between">
-<div style="reveal">#<b style="color:red">10</b> Top10tech rating</div>
+<div>#<b class="reveal" style="color:red">10</b> Top10tech rating</div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
