--- a/index.html
+++ b/index.html
@@ -530,12 +530,12 @@ window.addEventListener("scroll", reveal);
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3vsHOEJ" style="color:TEAL ;">Oppo A74 5G</a></h3>
                 <div class="d-flex justify-content-between">
 
-                  <div class="star-rating">#<b>2</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
+                  <div class="star-rating reveal">#<b>2</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
                   </div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
-                <button class="btn btn-primary btn-sm d-block w-100 mb-2 reveal" type="button" style="font-size:20px ;"><a href="https://amzn.to/3vsHOEJ" style="color:white ;text-decoration: none;"> View price on Amazon</a></button>
+                <button class="btn btn-primary btn-sm d-block w-100 mb-2 " type="button" style="font-size:20px ;"><a href="https://amzn.to/3vsHOEJ" style="color:white ;text-decoration: none;"> View price on Amazon</a></button>
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                 Quick view
                 </button><!-- Modal -->
