--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ window.addEventListener("scroll", reveal);
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 ">
             <div id="hov"class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
-              </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
+              </div><a class="card-img-top d-block overflow-hidden" ><img class=""style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">6 GB RAM, 128 GB Storage</a>
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3vsHOEJ" style="color:TEAL ;">Oppo A74 5G</a></h3>
                 <div class="d-flex justify-content-between">
@@ -635,7 +635,7 @@ labels:{
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
             <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
-              </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/313sxf4Q6mL.jpg" alt="Product"></a>
+              </div><a class="card-img-top d-block overflow-hidden" ><img class="reveal" src="https://m.media-amazon.com/images/I/313sxf4Q6mL.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">4 GB RAM, 64 GB Storage</a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3Jg3yJV" style="color:TEAL;">MOTOROLA G40 F </a></h3>
                 <div class="d-flex justify-content-between">
