--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@ window.addEventListener("scroll", reveal);
 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
-<h5>Our priority decreases as we go down the group 
-<i class="bi bi-arrow-down" ></i></h5>
+<h6>Our technical expert's priority decreases as we go down the group 
+<i class="bi bi-arrow-down" ></i></h6>
 <section class="container pt-5" > 
 
 
