--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ window.addEventListener("scroll", reveal);
               </div>
               <div class="card-body card-body-hidden">
                 <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3cIPHzj" style="color:white ;text-decoration: none;">View price on Amazon</a></button>
-                <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">Quick view
+                <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">Specifications
                 </button>
 <!-- Modal -->
                 <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel1" aria-hidden="true">
