--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ window.addEventListener("scroll", reveal);
 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
-<h6>Our technical expert's priority decreases as we go down the group 
+<h6>Our<span style="color:green"> technical expert's </span>priority decreases as we go down the group 
 <i class="bi bi-arrow-down" ></i></h6>
 <section class="container pt-5" > 
 
