--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ font:{size:6}
 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExamplegraph" aria-expanded="false" aria-controls="collapseExamplegraph">
     Click here to see the graph of average benchmark
   </button></p><br>
-<h5 style="text-align:center;" class="bi bi-asterisk text-danger">Avoid making a mistake and choose the best</h5>
+<h5 style="text-align:center;" class="bi bi-asterisk text-danger">Avoid making a mistake and choose one of the best</h5>
 
 </main>
 
