--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ window.addEventListener("scroll", reveal);
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3cIPHzj" style="color:teal;">Redmi Note 10S</a></h3>
                 <div class="d-flex justify-content-between">
 
-                  <div class="star-rating">#<b>1</b> Top10tech rating<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                  <div class="star-rating">#<b>1</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-fill"></i>
                   </div>
                 </div>
               </div>
@@ -531,7 +531,7 @@ window.addEventListener("scroll", reveal);
                 <h3 class="" style="color:red ;"><a href="https://amzn.to/3vsHOEJ" style="color:TEAL ;">Oppo A74 5G</a></h3>
                 <div class="d-flex justify-content-between">
 
-                  <div class="star-rating reveal">#<b>2</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
+                  <div class="star-rating reveal">#<b>2</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-fill"></i>
                   </div>
                 </div>
               </div>
@@ -641,7 +641,7 @@ labels:{
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3Jg3yJV" style="color:TEAL;">MOTOROLA G40 F </a></h3>
                 <div class="d-flex justify-content-between">
                   
-                  <div class="star-rating reveal">#<b style="color:red">3</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i>
+                  <div class="star-rating reveal">#<b style="color:red">3</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill "></i><i class="bi bi-star-half"></i>
                   </div>
                 </div>
               </div>
