--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ labels:{
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3P5LaEP" style="color:TEAL ;">Redmi 10</a></h3>
                 <div class="d-flex justify-content-between">
             
-                  <div class="star-rating reveal">#<b style="color:red">8</b> Top10tech rating<i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-filled active"></i><i class="star-rating-icon ci-star-half active"></i><i class="star-rating-icon ci-star"></i>
+                  <div class="star-rating reveal">#<b style="color:red">8</b> Top10tech's rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half "></i><i class="bi bi-star"></i>
                   </div>
                 </div>
               </div>
@@ -922,7 +922,7 @@ labels:{
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration: none;">6 GB RAM, 128 GB storage </a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3cMbPsK" style="color:TEAL ;">OPPO F19</a></h3>
                 <div class="d-flex justify-content-between">
-               <div class="reveal">#<b style="color:red">9</b> Top10tech rating</div>
+               <div class="reveal">#<b style="color:red">9</b> Top10tech rating  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half "></i><i class="bi bi-star"></i>   </div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
@@ -967,7 +967,7 @@ labels:{
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">4 GB RAM, 128 GB Storage</a>
                 <h3 class="product-title fs-sm"><a href="https://amzn.to/3JuIe3v" style="color:TEAL;">Narzo 50 A</a></h3>
                 <div class="d-flex justify-content-between">
-<div>#<b class="reveal" style="color:red">10</b> Top10tech rating</div>
+<div>#<b class="reveal" style="color:red">10</b> Top10tech rating <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-half"></i><i class="bi bi-star"></i> </div>
                 </div>
               </div>
               <div class="card-body card-body-hidden">
