--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ window.addEventListener("scroll", reveal);
       <div class="row pt-2 mx-n2">
 
           <!-- Product 1 -- Redmi note 10s -->
-           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4" >
+           <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4 border border-primary" >
             <div id="hov" class="card product-card" >
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
